# .dotfiles

./: .gitignore  .sops.yaml  CLAUDE.md  KEYBOARD_TROUBLESHOOTING_REPORT.md  NOTES.md  README-unstable-packages.md  README.md  RESTORATION_RECOMMENDATIONS.md  RESTORATION_SUMMARY.md  REVERT_REPORT.md  TASK_2_1_COMPLETION_REPORT.md  TEST-INSTRUCTIONS.md  TODO.md  build-usb-installer.sh  configuration.nix  flake.lock.bak  flake.nix  home.nix  opencode.json  opencode.json.backup  statix.toml  test-sasl.sh  test-update.md  unstable-packages.nix  update.sh
.claude/: CLAUDE.md  CLAUDE.md.backup  README.md  extensions.json  layered-architecture-design.md  settings.local.json  settings.local.json.backup  task-1-1-completion-report.md  task-2.2-completion-report.md  tool-allocation-audit.md  validate-tool-allocation.sh  validation-results.md
.opencode/: AGENTS.md  README.md  extensions.json  opencode.db-shm  opencode.db-wal  settings.local.json
.opencode_OLD/: AGENTS.md  extensions.json  settings.local.json
config/: .tmux.conf  README.md  alacritty.toml  claude-settings.json  config.fish  config.kdl  fastfetch.jsonc  himalaya-config.toml  kitty.conf  latexmkrc  neofetch.conf  opencode.json  rclone.conf  settings.json  sioyek-keys.config  sioyek-prefs.config  wezterm.lua  zuliprc
docs/: README.md  applications.md  claude-neovim-plugins-comparison.md  neovim.md  (+32 more)
opencode-discord-bot/: .gitignore  pyproject.toml
opencode-discord-bot/opencode_discord_bot/src/: __main__.py  api.py  bot.py  config.py  logging_config.py  opencode_client.py  relay.py  sse_subscriber.py  store.py
(+929 files in other folders)
